# String

./: CMakeLists.txt  README.md
includes/: String.hpp
resources/: input.txt
src/: String.cpp  main.cpp
